PUsh rendu final

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
-GlobalDefaultGameMode=/Game/Game/GM_Puzzle_Game.GM_Puzzle_Game_C
+GameDefaultMap=/Game/Levels/Lvl_Game.Lvl_Game
+EditorStartupMap=/Game/Levels/Lvl_Game.Lvl_Game
+GlobalDefaultGameMode=/Game/Blueprints/Bp_Gamemode_G4Puzzle.Bp_Gamemode_G4Puzzle_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
@@ -139,7 +140,7 @@ vr.MobileMultiView=False
 r.Mobile.UseHWsRGBEncoding=False
 vr.RoundRobinOcclusion=False
 r.MeshStreaming=False
-r.HeterogeneousVolumes=False
+r.HeterogeneousVolumes=True
 r.HeterogeneousVolumes.Shadows=False
 r.Translucency.HeterogeneousVolumes=False
 r.WireframeCullThreshold=5.000000
@@ -243,7 +244,7 @@ FontDPI=72
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=7AFA0CA942E0FD9EF3E14EA34797392F
+SecurityToken=5E271D9D4AB54A6C84CBD5878BF22B0C
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
